--- a/public/styles.css
+++ b/public/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  background-color:#1876F3;
+  background-color: #1876f3;
   margin: auto -16px;
   padding: 16px 32px;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
@@ -22,8 +22,6 @@ header h1 {
   font-family: "McLaren";
   font-weight: 200;
 }
-
-
 
 .content {
   background: #fff;
@@ -49,7 +47,7 @@ header h1 {
   position: relative;
   float: right;
   margin-right: 10px;
-  color: #1876F3;
+  color: #1876f3;
   border: none;
   width: 36px;
   height: 36px;
@@ -90,12 +88,11 @@ form textarea {
   outline: none;
 }
 
-
 .b-2 {
   position: absolute;
   right: 18px;
   bottom: 18px;
-  background: #1876F3;
+  background: #1876f3;
   color: #fff;
   border: none;
   border-radius: 10px;
@@ -106,14 +103,12 @@ form textarea {
   outline: none;
 }
 
-
-.img{
-width: 70px;
-margin-bottom: 30px;
+.img {
+  width: 70px;
+  margin-bottom: 30px;
 }
 
 /* Pop up */
-
 
 .btn-modal {
   padding: 10px 20px;
@@ -124,14 +119,14 @@ margin-bottom: 30px;
   color: #fff;
 }
 
-.modal, .overlay {
+.modal,
+.overlay {
   width: 100vw;
   height: 100vh;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-
 }
 
 .overlay {
@@ -159,18 +154,40 @@ margin-bottom: 30px;
   color: white;
 }
 
-   /* gifs */
+/* gifs */
 
- 
-  
-  .gifs {
-    margin: 0 auto;
-    width: 80%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .gif {
-    padding: 0 2px;
-  }
+.gif {
+  margin: 0 auto;
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  width: 100%;
+  margin-bottom: 5px;
+}
+
+
+
+.popover {
+  position: absolute;
+  z-index: 1;
+  padding: 1rem;
+  left: 0;
+  top: 102%;
+  background-color: white;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 5px #ccc;
+  height: 400px;
+  overflow: auto;
+}
+
+.search-bar{
+  width: auto;
+  height: 10%;
+  display: flex;
+  padding: 5px 5px;
+}
+
+.search-bar input {
+  width: 100%;
+}
